--- a/build.yaml
+++ b/build.yaml
@@ -1,11 +1,11 @@
 ---
 include:
-  - board: eyelash_corne_left
-    shield: nice_view
-    artifact-name: left
+#  - board: eyelash_corne_left
+#    shield: nice_view
+#    #snippet: zmk-usb-logging    # Uncomment to log over USB.
   - board: eyelash_corne_right
     shield: nice_view
-    artifact-name: right
+    #snippet: zmk-usb-logging
   - board: eyelash_corne_left
     shield: nice_view
     snippet: studio-rpc-usb-uart
@@ -13,5 +13,5 @@ include:
     artifact-name: eyelash_corne_studio_left
   - board: eyelash_corne_left
     shield: settings_reset
-    artifact-name: reset
+    #snippet: zmk-usb-logging
  
